tests/negative/typecheck/args_named_few.orng
// args_named_few.orng:6:36: error: product takes 2 fields, 1 value given
//     let x: (a: Int, b: Int) = (.a = 43,)
//                                   ^
// 
fn main() -> Int {
    let x: (a: Int, b: Int) = (.a = 43,)
    4
}
